crates/rome_cli/tests/snapshots/main_commands_check/dont_applies_organize_imports_for_ignored_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

## `rome.json`

```json
{ "organizeImports": { "enabled": true, "ignore": ["check.js"] } }
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


